--- a/aviation-workflow/.env.example
+++ b/aviation-workflow/.env.example
@@ -1,29 +1,60 @@
-# Core Configuration
+# Aviation Workflow System - Environment Configuration Template
+# Copy this file to .env and customize for your environment
+
+# =============================================================================
+# CORE CONFIGURATION
+# =============================================================================
+
+# Application Environment
 APP_NAME="Aviation Workflow System"
 APP_ENV="development"  # development/staging/production
 DEBUG=true
+SECRET_KEY="dev-secret-key-change-in-production"
 
-# Database
-DATABASE_URL="sqlite:///./workflow.db"  # PostgreSQL in production
-# DATABASE_URL="postgresql://user:pass@localhost/workflow"
+# =============================================================================
+# DATABASE CONFIGURATION
+# =============================================================================
 
-# Redis (Optional)
-REDIS_URL="redis://localhost:6379/0"
-USE_REDIS=false
+# SQLite (Development)
+DATABASE_URL="sqlite:///./workflow.db"
 
-# Burr Configuration
-BURR_TRACKER_TYPE="local"  # local/api
-BURR_STATE_DIR="./burr_state"
+# PostgreSQL (Production)
+# DATABASE_URL="postgresql://aviation_user:aviation_password@localhost:5432/aviation_workflow"
 
-# Module Configuration
-ENABLED_MODULES="departments,approvals,comments,templates"
-MODULE_AUTO_LOAD=true
+# =============================================================================
+# API CONFIGURATION
+# =============================================================================
 
-# API Configuration
+# Server Settings
+API_HOST="0.0.0.0"
+API_PORT=8000
 API_PREFIX="/api"
-API_VERSION="v1"
-CORS_ORIGINS="http://localhost:8501"  # Streamlit default
 
-# Streamlit Configuration
-STREAMLIT_SERVER_PORT=8501
-STREAMLIT_SERVER_ADDRESS="localhost"
+# CORS Settings
+CORS_ORIGINS="http://localhost:8501,http://localhost:3000"
+
+# =============================================================================
+# MODULE CONFIGURATION
+# =============================================================================
+
+# Enabled Modules (comma-separated)
+ENABLED_MODULES="departments,templates,comments,approvals"
+
+# =============================================================================
+# FEATURE FLAGS
+# =============================================================================
+
+# Authentication
+ENABLE_AUTH=false
+
+# Features
+ENABLE_NOTIFICATIONS=false
+ENABLE_METRICS=true
+
+# =============================================================================
+# DEVELOPMENT SETTINGS
+# =============================================================================
+
+# Development Mode
+DEV_RELOAD=true
+DEV_SEED_DATA=true
